name:               insieme-hat
version:            0.2
synopsis:           Analysis framework based on ideas from the book: Principles of Program Analysis.
license:            GPL-3
author:             Thomas Prokosch <tprokos@dps.uibk.ac.at>, Alex Hirsch <alexander.hirsch@uibk.ac.at>
maintainer:         Thomas Prokosch <tprokos@dps.uibk.ac.at>
build-type:         Simple
cabal-version:      >= 1.10

library
    ghc-options:        -Wall -Wno-name-shadowing -Wno-type-defaults -Wno-unused-do-bind
                        -O2 -optc-O3
    hs-source-dirs:     src
    build-tools:        c2hs
    exposed-modules:    Insieme.Analysis.AccessPath,
                        Insieme.Analysis.Alias,
                        Insieme.Analysis.Arithmetic,
                        Insieme.Analysis.Boolean,
                        Insieme.Analysis.Callable,
                        Insieme.Analysis.CallSite,
                        Insieme.Analysis.DataPath,
                        Insieme.Analysis.Entities.AccessPath,
                        Insieme.Analysis.Entities.DataPath,
                        Insieme.Analysis.Entities.FieldIndex,
                        Insieme.Analysis.Entities.Memory,
                        Insieme.Analysis.Entities.ProgramPoint,
                        Insieme.Analysis.Entities.SymbolicFormula,
                        Insieme.Analysis.ExitPoint,
                        Insieme.Analysis.Framework.Dataflow,
                        Insieme.Analysis.Framework.MemoryState,
                        Insieme.Analysis.Framework.ProgramPoint,
                        Insieme.Analysis.Framework.PropertySpace.ComposedValue,
                        Insieme.Analysis.Framework.PropertySpace.ValueTree,
                        Insieme.Analysis.Framework.Utils.OperatorHandler,
                        Insieme.Analysis.FreeLambdaReferences,
                        Insieme.Analysis.Identifier,
                        Insieme.Analysis.Predecessor,
                        Insieme.Analysis.Reachable,
                        Insieme.Analysis.RecursiveLambdaReferences,
                        Insieme.Analysis.Reference,
                        Insieme.Analysis.Solver,
                        Insieme.Analysis.SymbolicValue,
                        Insieme.Analysis.Utils.CppSemantic,
                        Insieme.Analysis.WriteSetSummary,
                        Insieme.Context,
                        Insieme.Inspire,
                        Insieme.Inspire.BinaryDumper,
                        Insieme.Inspire.BinaryParser,
                        Insieme.Inspire.Builder,
                        Insieme.Inspire.NodeAddress,
                        Insieme.Inspire.NodeType,
                        Insieme.Inspire.Query,
                        Insieme.Inspire.ThHelpers,
                        Insieme.Inspire.Transform,
                        Insieme.Inspire.Visit,
                        Insieme.Utils,
                        Insieme.Utils.Arithmetic,
                        Insieme.Utils.BoundSet,
                        Insieme.Utils.ParseIR,
                        Insieme.Utils.ParseInt
    build-depends:      attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        c-storable-deriving >= 0.1.3,
                        containers >= 0.5,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        directory >= 1.2.0
    include-dirs:       ../../../../../core/include
    default-language:   Haskell2010

foreign-library insieme-hat
    type:               native-shared
    if os(windows)
      options: standalone

    -- Cannot build foreign libs with profiling yet
    if flag(profiling)
      buildable: False

    hs-source-dirs:     src
    c-sources:          cbits/wrapper.c
    other-modules:      Insieme.Adapter
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        c-storable-deriving >= 0.1.3,
                        containers >= 0.5,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        directory >= 1.2.0
    default-language:   Haskell2010


executable insieme-hat-exe
    main-is:            Main.hs
    hs-source-dirs:     src/bin
    build-depends:      insieme-hat >= 0.2,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4
    default-language:   Haskell2010

executable cba_runner
    main-is:            CbaRunner.hs
    hs-source-dirs:     src/bin
    build-depends:      insieme-hat >= 0.2,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        text >= 1.2,
                        text-format >= 0.3,
                        transformers >= 0.4
    default-language:   Haskell2010

executable parseNdump
    main-is:            parseNdump.hs
    hs-source-dirs:     src/bin
    build-depends:      insieme-hat >= 0.2,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        text >= 1.2,
                        text-format >= 0.3,
                        transformers >= 0.4
    default-language:   Haskell2010

executable collect
    main-is:            collect.hs
    ghc-options:        -fprof-auto
    hs-source-dirs:     src/bin
    build-depends:      insieme-hat >= 0.2
                      , base        >= 4.7
                      , bytestring  >= 0.10
    default-language:   Haskell2010

test-suite test
    main-is:            test.hs
    hs-source-dirs:     tests
    other-modules:      BoundSet,
                        Formula,
                        ParseInt,
                        Transform
    build-depends:      insieme-hat >= 0.2,
                        base >= 4.7,
                        containers >= 0.5,
                        tasty >= 0.11,
                        tasty-hunit >= 0.9,
                        pretty-show >= 1.6 && < 1.7
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010

executable profiler
    main-is:            Profiler.hs
    hs-source-dirs:     src/bin
    default-language:   Haskell2010
    build-depends:
                        base             >= 4.7
                      , bytestring       == 0.10.*
                      , containers       >= 0.5
                      , process          >= 1.2.3
                      , process-extras   >= 0.7.1
                      , split            >= 0.2.3.1
                      , filepath         >= 1.4

benchmark bench
    main-is:            bench.hs
    hs-source-dirs:     bench
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    other-modules:      Insieme.Benchmark.InputData
                      , Insieme.Benchmark.Utils
    build-depends:      insieme-hat
                      , base
                      , attoparsec
                      , attoparsec-binary
                      , bytestring
                      , containers
                      , criterion
                      , deepseq
                      , Glob
                      , hashable
                      , mtl
                      , process
                      , split

flag profiling
  description: Should be enabled manually when doing a profiling build
  default:     False
  manual:      True
