name:               insieme-hat
version:            0.2
synopsis:           Analysis framework based on ideas from the book: Principles of Program Analysis.
license:            GPL-3
author:             Thomas Prokosch <tprokos@dps.uibk.ac.at>, Alex Hirsch <alexander.hirsch@uibk.ac.at>
maintainer:         Thomas Prokosch <tprokos@dps.uibk.ac.at>
build-type:         Simple
cabal-version:      >= 1.10

library
    ghc-options:        -Wall -Wno-name-shadowing -Wno-type-defaults -Wno-unused-do-bind
                        -O2 -optc-O3

    if flag(profiling)
        hs-source-dirs:  profiling-stubs/ src/
    else
        hs-source-dirs:  src/

    build-tools:        c2hs
    exposed-modules:
                        Insieme.Adapter.Utils,
                        Insieme.Analysis.AccessPath,
                        Insieme.Analysis.Alias,
                        Insieme.Analysis.Arithmetic,
                        Insieme.Analysis.Boolean,
                        Insieme.Analysis.Callable,
                        Insieme.Analysis.CallSite,
                        Insieme.Analysis.DataPath,
                        Insieme.Analysis.DynamicCallSites,
                        Insieme.Analysis.Entities.AccessPath,
                        Insieme.Analysis.Entities.DataPath,
                        Insieme.Analysis.Entities.FieldIndex,
                        Insieme.Analysis.Entities.Memory,
                        Insieme.Analysis.Entities.ProgramPoint,
                        Insieme.Analysis.Entities.SymbolicFormula,
                        Insieme.Analysis.ExitPoint,
                        Insieme.Analysis.Framework.Dataflow,
                        Insieme.Analysis.Framework.ExecutionTree,
                        Insieme.Analysis.Framework.MemoryState,
                        Insieme.Analysis.Framework.ProgramPoint,
                        Insieme.Analysis.Framework.PropertySpace.ComposedValue,
                        Insieme.Analysis.Framework.PropertySpace.ValueTree,
                        Insieme.Analysis.Framework.Utils.OperatorHandler,
                        Insieme.Analysis.Identifier,
                        Insieme.Analysis.Predecessor,
                        Insieme.Analysis.Reachable,
                        Insieme.Analysis.RecursiveLambdaReferences,
                        Insieme.Analysis.Reference,
                        Insieme.Analysis.SymbolicValue,
                        Insieme.Analysis.Utils.CppSemantic,
                        Insieme.Analysis.WriteSetSummary,
                        Insieme.Context,
                        Insieme.Inspire,
                        Insieme.Inspire.BinaryDumper,
                        Insieme.Inspire.BinaryParser,
                        Insieme.Inspire.Builder,
                        Insieme.Inspire.IR.NodeKind,
                        Insieme.Inspire.IR.NodeLike
                        Insieme.Inspire.IR.NodeType,
                        Insieme.Inspire.IR.NodeType.ThHelpers,
                        Insieme.Inspire.IR.Transform,
                        Insieme.Inspire.IR.Tree,
                        Insieme.Inspire.NodeAddress,
                        Insieme.Inspire.NodePath,
                        Insieme.Inspire.NodeReference
                        Insieme.Inspire.SourceParser
                        Insieme.Inspire.SourceParser.FFI
                        Insieme.Inspire.Visit,
                        Insieme.Inspire.Visit.NodeMap,
                        Insieme.Inspire.Visit.NodePaths,
                        Insieme.Query,
                        Insieme.Query.NodeReference,
                        Insieme.Query.NodeAddress,
                        Insieme.Solver,
                        Insieme.Solver.Assignment
                        Insieme.Solver.AssignmentView
                        Insieme.Solver.Constraint
                        Insieme.Solver.DebugFlags
                        Insieme.Solver.Identifier
                        Insieme.Solver.Lattice
                        Insieme.Solver.Metadata
                        Insieme.Solver.SolverState
                        Insieme.Solver.Statistics
                        Insieme.Solver.Var
                        Insieme.Solver.VarMap
                        Insieme.Solver.VariableIndex
                        Insieme.Utils,
                        Insieme.Utils.Arithmetic,
                        Insieme.Utils.BoundSet,
                        Insieme.Utils.ParseInt
    build-depends:      attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        c-storable-deriving >= 0.1.3,
                        containers >= 0.5.10,
                        unordered-containers >= 0.2,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        process-listlike,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        directory >= 1.2.0,
                        aeson >= 1.2 && <1.3,
                        binary >= 0.5,
                        parallel >= 3.2.1.0 && <3.3,
                        regex-base >= 0.93 && < 0.94,
                        regex-tdfa >= 1.2.2 && < 1.3
    include-dirs:       ../../../../../core/include
    -- track following headers as dependencies:
    install-includes:   insieme/core/ir_nodes.def
    default-language:   Haskell2010

foreign-library insieme-hat
    type:               native-shared
    if os(windows)
      options: standalone

    -- Cannot build foreign libs with profiling yet
    if flag(profiling)
      buildable: False

    hs-source-dirs:     flib/
    c-sources:          cbits/wrapper.c
    other-modules:      Insieme.Adapter
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        c-storable-deriving >= 0.1.3,
                        containers >= 0.5.10,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        directory >= 1.2.0
    default-language:   Haskell2010


executable insieme-hat-exe
    main-is:            Main.hs
    hs-source-dirs:     bin/
    extra-libraries:    insieme_analysis
                        stdc++
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5.10,
                        hashable >= 1.2.4,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4
    default-language:   Haskell2010

executable cba_runner
    main-is:            CbaRunner.hs
    hs-source-dirs:     bin/
    extra-libraries:    insieme_analysis
                        stdc++
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5.10,
                        hashable >= 1.2.4,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        text >= 1.2,
                        text-format >= 0.3,
                        transformers >= 0.4
    default-language:   Haskell2010

executable parseNdump
    main-is:            parseNdump.hs
    hs-source-dirs:     bin/
    extra-libraries:    insieme_analysis
                        stdc++
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5.10,
                        hashable >= 1.2.4,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        text >= 1.2,
                        text-format >= 0.3,
                        transformers >= 0.4
    default-language:   Haskell2010

executable collect
    main-is:            collect.hs
    hs-source-dirs:     bin/
    extra-libraries:    insieme_analysis
                        stdc++
    build-depends:      insieme-hat
                      , base        >= 4.7
                      , bytestring  >= 0.10
                      , deepseq
                      , containers
    default-language:   Haskell2010

test-suite test
    main-is:            test.hs
    hs-source-dirs:     tests
    extra-libraries:    insieme_analysis
                        stdc++
    other-modules:      BoundSet,
                        Formula,
                        ParseInt,
                        Transform,
                        Visit
    build-depends:      insieme-hat,
                        base >= 4.7,
                        containers >= 0.5.10,
                        tasty >= 0.11,
                        tasty-hunit >= 0.9,
                        pretty-show >= 1.6 && < 1.7
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010

executable profiler
    main-is:            Profiler.hs
    hs-source-dirs:     bin/
    extra-libraries:    insieme_analysis
                        stdc++
    default-language:   Haskell2010
    build-depends:
                        base             >= 4.7
                      , bytestring       == 0.10.*
                      , containers       >= 0.5
                      , process          >= 1.2.3
                      , process-extras   >= 0.7.1
                      , split            >= 0.2.3.1
                      , filepath         >= 1.4

benchmark bench
    main-is:            bench.hs
    hs-source-dirs:     bench
    extra-libraries:    insieme_analysis
                        stdc++
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    other-modules:      Insieme.Benchmark.InputData
                      , Insieme.Benchmark.Utils
    build-depends:      insieme-hat
                      , base
                      , attoparsec
                      , attoparsec-binary
                      , bytestring
                      , containers
                      , criterion
                      , deepseq
                      , Glob
                      , hashable
                      , mtl
                      , process
                      , split

flag profiling
  description: Should be enabled manually when doing a profiling build
  default:     False
  manual:      True
